<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >LearningAndroid
    </string>
    <string name="action_settings" >Settings
    </string>
    <string name="hello_world" >Hello world!
    </string>
    <string name="button1">Button #1
    </string>
    <string name="button2">Button #2
    </string>
    <string name="button3">Button #3
    </string>
    <string name="button4">Button #4
    </string>
    <string name="myText">My Text String
    </string>
    <string name="checkBox">CheckBox
    </string>

</resources>
