<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/myText"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button1"
            android:id="@+id/button"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="23dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:id="@+id/button2"
            android:layout_alignTop="@+id/button"
            android:layout_toRightOf="@+id/textView"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button3"
            android:id="@+id/button3"
            android:layout_below="@+id/button"
            android:layout_alignLeft="@+id/button"
            android:layout_marginTop="17dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button4"
            android:id="@+id/button4"
            android:layout_alignTop="@+id/button3"
            android:layout_alignLeft="@+id/button2"/>

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox"
            android:id="@+id/checkBox"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/checkBox"
            android:layout_centerHorizontal="true"/>

</RelativeLayout>
